force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__AdditionalEmailAddresses__c.field-meta.xml
<CustomField>
    <fullName>sfcma__AdditionalEmailAddresses__c</fullName>
    <description>Stores the additional email addresses of the customer.</description>
    <label>Additional Email Addresses</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>