force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__Customer__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Customer__c</fullName>
    <description>Name of the Account associated with this customer&apos;s subscriptions.</description>
    <label>Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>