force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__CustomerName__c.field-meta.xml
<CustomField>
    <fullName>sfcma__CustomerName__c</fullName>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>