force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__CustomerOrgId__c.field-meta.xml
<CustomField>
    <fullName>sfcma__CustomerOrgId__c</fullName>
    <description>The Organization Id of the Customer&apos;s org.</description>
    <externalId>true</externalId>
    <label>Customer Org Id (deprecated)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>