force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__CustomerOrgIdUnique__c.field-meta.xml
<CustomField>
    <fullName>sfcma__CustomerOrgIdUnique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The Organization Id of the Customer&apos;s org.</description>
    <externalId>true</externalId>
    <label>Customer Org Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>