force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>sfcma__ShippingCountry__c</fullName>
    <description>Customer&apos;s shipping country</description>
    <label>Shipping Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>