force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__TemporaryAmountDiscountedByCoupon__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TemporaryAmountDiscountedByCoupon__c</fullName>
    <label>Temporary Amount Discounted By Coupon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>