force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__TemporaryBillingCountry__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TemporaryBillingCountry__c</fullName>
    <label>Temporary Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>