force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__TemporaryChargeVAT__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TemporaryChargeVAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temporary Charge VAT</label>
    <type>Checkbox</type>
</CustomField>