force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__TemporaryCoupon__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TemporaryCoupon__c</fullName>
    <label>Temporary Coupon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>