force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__TemporaryCouponLifespan__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TemporaryCouponLifespan__c</fullName>
    <label>Temporary Coupon Lifespan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>Forever</fullName>
            </value>
            <value>
                <fullName>Limited Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>