force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__TemporaryListingId__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TemporaryListingId__c</fullName>
    <label>Temporary Listing Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>