force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__TemporaryListingName__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TemporaryListingName__c</fullName>
    <label>Temporary Listing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>