force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__TemporaryNumberOfTimesCouponApplies__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TemporaryNumberOfTimesCouponApplies__c</fullName>
    <label>Temporary Number Of Times Coupon Applies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>