force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__TemporaryPackageId__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TemporaryPackageId__c</fullName>
    <label>Temporary Package Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>