force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__TemporaryPercentDiscountedByCoupon__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TemporaryPercentDiscountedByCoupon__c</fullName>
    <label>Temporary Percent Discounted By Coupon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>