force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__TemporaryShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TemporaryShippingCountry__c</fullName>
    <label>Temporary Shipping Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>