force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__TemporaryStripeCustomerId__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TemporaryStripeCustomerId__c</fullName>
    <label>Temporary Stripe Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>