force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__TemporaryVATNumber__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TemporaryVATNumber__c</fullName>
    <label>Temporary VAT Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>