force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__TemporaryVATPercentage__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TemporaryVATPercentage__c</fullName>
    <label>Temporary VAT Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>