force-app/main/default/objects/sfcma__Customer__c/fields/sfcma__TotalContractValue__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TotalContractValue__c</fullName>
    <label>Total Contract Value</label>
    <summarizedField>sfcma__Subscription__c.sfcma__TotalAmount__c</summarizedField>
    <summaryFilterItems>
        <field>sfcma__Subscription__c.sfcma__Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>sfcma__Subscription__c.sfcma__Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>