force-app/main/default/objects/sfcma__Customer__c/listViews/sfcma__All.listView-meta.xml
<ListView>
    <fullName>sfcma__All</fullName>
    <columns>NAME</columns>
    <columns>sfcma__CustomerName__c</columns>
    <columns>sfcma__CustomerOrgIdUnique__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>